Fix image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,6 @@ div {
 }
 
 img {
-  vertical-align: middle;
   margin-top: 1.5rem;
   max-width: 25em;
   display: block;
